--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gezi Rehberi</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>Gezi Rehberi</h1>
+
   <label for="sehirSec">Bir şehir seçin:</label>
   <select id="sehirSec">
     <option value="">--Şehir Seçin--</option>
   </select>
+
+  <div id="geziYerleri"></div>
 
   <script src="data.js"></script>
   <script src="script.js"></script>
