--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gezi Rehberi</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css"> <!-- style.css burada bağlanıyor -->
 </head>
 <body>
-  <h1>Gezi Rehberi</h1>
+  <div class="container">
+    <h1>Gezi Rehberi</h1>
 
-  <label for="sehirSec">Bir şehir seçin:</label>
-  <select id="sehirSec">
-    <option value="">--Şehir Seçin--</option>
-  </select>
+    <label for="sehirSec">Bir şehir seçin:</label>
+    <select id="sehirSec">
+      <option value="">--Şehir Seçin--</option>
+    </select>
 
-  <div id="geziYerleri"></div>
+    <div id="geziYerleri"></div>
+  </div>
 
   <script src="data.js"></script>
   <script src="script.js"></script>
