giriş ekranı ve site boyutlandırmalarında köklü değişiklikler yapıldı.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="giris-ekrani">
-    <h1>Gezi Rehberi Sitesi</h1>
+    <h1>Türkiye Gezi Rehberi</h1>
     <button onclick="girisYap()">Hadi Başlayalım!</button>
   </div>
   <div id="sehir-secim-ekrani" style="display: none;">
