--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gezi Rehberi</title>
   <link rel="stylesheet" href="style.css"> <!-- style.css burada bağlanıyor -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+   
+
   <div id="giris-ekrani">
     <h1>Türkiye Gezi Rehberi</h1>
     <button onclick="girisYap()">Hadi Başlayalım!</button>
   </div>
+
   <div id="sehir-secim-ekrani" style="display: none;">
     <div class="container">
+      <div class="darkMode">
+        <i class="fa-solid fa-moon"></i>
+       
+      </div>
+   
       <h1>Gezi Rehberi</h1>
   
       <label for="bolgeSec">Bir bölge seçin:</label>
@@ -37,7 +47,8 @@
       <div id="geziYerleri"></div>
     </div>
   </div>
-  
+
+
   <script>
     function girisYap() {
       document.getElementById('giris-ekrani').style.display = 'none';
