--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         #giris-ekrani{isolation: isolate;}
     </style>
     <h1>Türkiye Gezi Rehberi</h1>
-    <button onclick="girisYap()">Hadi Başlayalım!</button>
+    <button onclick="girisYap()">GEZELİM</button>
   
   </div>
 
