--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <!-- Giriş ekranı -->
   <div id="giris-ekrani" class="fade">
+     <style>
+        #giris-ekrani{isolation: isolate;}
+    </style>
     <h1>Türkiye Gezi Rehberi</h1>
     <button id="baslaBtn">-Başlayalım!-</button>
   </div>
