dinamik başlık eklendi

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <!-- Şehir seçim ekranı -->
   <div id="sehir-secim-ekrani" class="fade-in">
     <div class="container">
-      <h1>Gezi Rehberi</h1>
+      <h1 id="siteBaslik">Gezi Rehberi</h1>
+
 
       <label for="bolgeSec">Bir bölge seçin:</label>
       <select id="bolgeSec">
