favorileri listeleme özelliği eklendi ve scroll sorunu giderildi

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <option value="Dogu_Anadolu">Doğu Anadolu</option>
         <option value="Guneydogu_Anadolu">Güneydoğu Anadolu</option>
       </select>
+       <button id="favorilerBtn">Favorilerimi Gör</button>
+<div id="favorilerAlani"></div>
 
       <label for="sehirSec">Bir şehir seçin:</label>
       <select id="sehirSec" disabled>
