başlık tasarımı yenilendi

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
   <script>
     const options = {
-      bottom: '600px',
+      top: '32px',
       left: '32px',
       time: '0.7s',
       mixColor: '#fff',
